Overflow Fixed

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -9,7 +9,6 @@
 body {
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
-  overflow: hidden;
 }
 
 .react-tabs__tab--selected button {
